Minor spacing fix (credit to Jen)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@ SIDEBAR
 }
 .valign-wrapper.container.card-images ul{
 	display: inline-block;
+	-webkit-padding-start: 10px;
 }
 
 .responsive-img img{
@@ -69,7 +70,9 @@ SIDEBAR
 }
 
 
-
+li.responsive-img.col.s4 {
+	width: auto;
+}
 
 nav.pagination{
 	position:absolute;
